export const snapshot = {};

snapshot[`global > FindMany > Select Clause > selecting email only returns email field 1`] = `
[
  {
    archived: false,
    createdAt: 2023-07-16T17:37:35.426Z,
    id: "1",
    properties: {
      email: "emailmaria@hubspot.com",
    },
    updatedAt: undefined,
  },
  {
    archived: false,
    createdAt: 2023-07-16T17:37:35.683Z,
    id: "51",
    properties: {
      email: "bh@hubspot.com",
    },
    updatedAt: undefined,
  },
]
`;

snapshot[`global > FindMany > Where Clause > email equals "fakeemail" 1`] = `
[
  {
    archived: false,
    createdAt: 2023-07-16T17:37:35.426Z,
    id: "1",
    properties: {},
    updatedAt: undefined,
  },
  {
    archived: false,
    createdAt: 2023-07-16T17:37:35.683Z,
    id: "51",
    properties: {},
    updatedAt: undefined,
  },
]
`;

snapshot[`global > FindMany > Where Clause > email equals null 1`] = `
[
  {
    archived: false,
    createdAt: 2023-07-16T17:37:35.426Z,
    id: "1",
    properties: {},
    updatedAt: undefined,
  },
  {
    archived: false,
    createdAt: 2023-07-16T17:37:35.683Z,
    id: "51",
    properties: {},
    updatedAt: undefined,
  },
]
`;

snapshot[`global > FindMany > Where Clause > email NOT equal null 1`] = `
[
  {
    archived: false,
    createdAt: 2023-07-16T17:37:35.426Z,
    id: "1",
    properties: {},
    updatedAt: undefined,
  },
  {
    archived: false,
    createdAt: 2023-07-16T17:37:35.683Z,
    id: "51",
    properties: {},
    updatedAt: undefined,
  },
]
`;

snapshot[`global > FindMany > Where Clause > followercount equal 123 1`] = `
[
  {
    archived: false,
    createdAt: 2023-07-16T17:37:35.426Z,
    id: "1",
    properties: {},
    updatedAt: undefined,
  },
  {
    archived: false,
    createdAt: 2023-07-16T17:37:35.683Z,
    id: "51",
    properties: {},
    updatedAt: undefined,
  },
]
`;

snapshot[`global > FindMany > Where Clause > email not equal "fakeemail" 1`] = `
[
  {
    archived: false,
    createdAt: 2023-07-16T17:37:35.426Z,
    id: "1",
    properties: {},
    updatedAt: undefined,
  },
  {
    archived: false,
    createdAt: 2023-07-16T17:37:35.683Z,
    id: "51",
    properties: {},
    updatedAt: undefined,
  },
]
`;
